--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "crew-umd.github.io/mmc-website/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
+    "vercel": "^36.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
